# snappy

./: Makefile  pyproject.toml  readme.md  setup.py
docs/example_config/: snappy.toml
snappy/: __init__.py
src/snappy/: __init__.py  cli.py  config.py  send.py  snappy.py  snapshots.py  test_utils.py  utils.py  zfs.py
tests/: conftest.py  test_auto.py  test_cli.py  test_examples.py  test_fixtures.py  test_foo.py  test_parse_keep_spec.py  test_pre_snapshot_script.py  test_prefix.py  test_prune.py  test_select_kept_snapshots.py  test_send.py  test_simple.py  test_snapshot.py
