[project]
name = "snappy"
version = "0"
dependencies = ["toml", "dacite", "typing_extensions"]

[project.optional-dependencies]
dev = ["pytest", "mypy", "types-toml"]

[project.scripts]
snappy = "snappy:entry_point"

[tool.mypy]
files = ["src", "tests"]
namespace_packages = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_concatenate = true
strict_equality = true
check_untyped_defs = true
disallow_any_generics = true

[tool.pytest.ini_options]
testpaths = "tests"

# Allow log output to be inspected with capsys fixutre.
addopts = "-p no:logging"
