[project]
name = "snappy"
version = "0"
dependencies = ["toml", "dacite", "typing_extensions"]

[project.optional-dependencies]
dev = ["pytest", "mypy", "types-toml"]

[project.scripts]
snappy = "snappy:entry_point"

[tool.mypy]
files = ["src"]
namespace_packages = true
ignore_missing_imports = true
warn_unreachable = true
strict = true

[tool.pytest.ini_options]
testpaths = "tests"

# Allow log output to be inspected with capsys fixutre.
addopts = "-p no:logging"
