[project]
name = "snappy"
version = "0"
dependencies = ["toml", "dacite", "typing_extensions"]

[project.optional-dependencies]
dev = ["pytest", "mypy", "types-toml"]

[project.scripts]
snappy = "snappy.cli:entry_point"

[tool.mypy]
files = ["src", "tests"]
namespace_packages = true
ignore_missing_imports = true
warn_unreachable = true
warn_unused_configs = true
warn_redundant_casts = true

# This, plus the overrides below, are basically all settings enabled by --strict.
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = "snappy.*"

check_untyped_defs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = "tests"

# Allow log output to be inspected with capsys fixutre.
addopts = "-p no:logging"
